[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=agents --cov=utils"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
line_length = 100
